--- a/results/ADRmu7_TC.ipynb
+++ b/results/ADRmu7_TC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -18,117 +18,13 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Arroyo TECSource Chamber Temp</th>\n",
-       "      <th>3458Bz</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Time</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2023-01-17 16:29:30</th>\n",
-       "      <td>15.00000</td>\n",
-       "      <td>9.981766</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-01-17 16:29:40</th>\n",
-       "      <td>15.00020</td>\n",
-       "      <td>9.981765</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-01-17 16:29:50</th>\n",
-       "      <td>15.00040</td>\n",
-       "      <td>9.981765</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-01-17 16:30:00</th>\n",
-       "      <td>15.00025</td>\n",
-       "      <td>9.981765</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-01-17 16:30:10</th>\n",
-       "      <td>15.00880</td>\n",
-       "      <td>9.981765</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-01-17 18:50:20</th>\n",
-       "      <td>14.99780</td>\n",
-       "      <td>9.981763</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-01-17 18:50:30</th>\n",
-       "      <td>14.99700</td>\n",
-       "      <td>9.981763</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-01-17 18:50:40</th>\n",
-       "      <td>14.99700</td>\n",
-       "      <td>9.981763</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-01-17 18:50:50</th>\n",
-       "      <td>14.99700</td>\n",
-       "      <td>9.981763</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-01-17 18:51:00</th>\n",
-       "      <td>14.99700</td>\n",
-       "      <td>9.981763</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>850 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     Arroyo TECSource Chamber Temp    3458Bz\n",
-       "Time                                                        \n",
-       "2023-01-17 16:29:30                       15.00000  9.981766\n",
-       "2023-01-17 16:29:40                       15.00020  9.981765\n",
-       "2023-01-17 16:29:50                       15.00040  9.981765\n",
-       "2023-01-17 16:30:00                       15.00025  9.981765\n",
-       "2023-01-17 16:30:10                       15.00880  9.981765\n",
-       "...                                            ...       ...\n",
-       "2023-01-17 18:50:20                       14.99780  9.981763\n",
-       "2023-01-17 18:50:30                       14.99700  9.981763\n",
-       "2023-01-17 18:50:40                       14.99700  9.981763\n",
-       "2023-01-17 18:50:50                       14.99700  9.981763\n",
-       "2023-01-17 18:51:00                       14.99700  9.981763\n",
-       "\n",
-       "[850 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In a sweep between 14.9042°C and 35.11619999999999°C\n",
+      "with a speed of roughly 17.14091872791519°C per hour\n",
+      "we see a voltage tempco of roughly 0.03220858895026389 ppm/k\n"
+     ]
     }
    ],
    "source": [
@@ -156,7 +52,12 @@
     "twin1.plot(raw.iloc[:,0])\n",
     "ax.yaxis.set_major_formatter(FormatStrFormatter('%.7f'))\n",
     "plt.show()\n",
-    "raw\n"
+    "print(\"In a sweep between \"+str(raw[\"Arroyo TECSource Chamber Temp\"].min())+\"°C and \"+str(raw[\"Arroyo TECSource Chamber Temp\"].max())+\"°C\")\n",
+    "time_range=(raw.index.max() - raw.index.min()).total_seconds()\n",
+    "temperature_range=raw[\"Arroyo TECSource Chamber Temp\"].max()-raw[\"Arroyo TECSource Chamber Temp\"].min()\n",
+    "voltage_range=raw[\"3458Bz\"].max()-raw[\"3458Bz\"].min()\n",
+    "print(\"with a speed of roughly \"+str(temperature_range/(time_range/3600)*2)+\"°C per hour\")\n",
+    "print(\"we see a voltage tempco of roughly \"+str((voltage_range/.00001)/temperature_range)+\" ppm/k\")"
    ]
   },
   {
